<resources>
    <string name="app_name">My Application</string>
    <string name="menu_home">Home</string>
    <string name="menu_water">Water</string>
    <string name="menu_add">Add</string>
    <string name="menu_premium">Premium</string>
    <string name="planty">Planty</string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="don_t_have_an_account_yet_click_here_to_sign_up">Don\'t have an account yet? Click here to</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>

</resources>