<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnLogIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingLeft="20dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp"
    android:paddingRight="20dp"
    android:paddingBottom="10dp"
    tools:context=".LogIn">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/belgrano"
        android:text="@string/planty"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />


    <EditText
        android:id="@+id/inputEmailAddress"
        android:layout_width="353dp"
        android:layout_height="48dp"
        android:layout_marginTop="324dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="353dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Loginbtn"
        app:layout_constraintEnd_toEndOf="@+id/inputEmailAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/inputEmailAddress"
        app:layout_constraintVertical_bias="0.326" />

    <Button
        android:id="@+id/Loginbtn"
        android:layout_width="350dp"
        android:layout_height="51dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#FFFFFF"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:shadowColor="#FFFFFF"
        android:text="@string/log_in"
        android:textColor="#000000"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/inputPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputPassword"
        app:strokeColor="#FFFFFF" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/Loginbtn"
        app:layout_constraintEnd_toEndOf="@+id/Loginbtn"
        app:layout_constraintStart_toStartOf="@+id/Loginbtn"
        app:layout_constraintTop_toBottomOf="@+id/Loginbtn">

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/Loginbtn"
        app:layout_constraintHorizontal_bias="0.717"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>


